--- a/Docker Jupyter Lab y Jupyter Notebook/Dockerfile
+++ b/Docker Jupyter Lab y Jupyter Notebook/Dockerfile
@@ -3,8 +3,8 @@ FROM python:latest
 
 #actualiza el pip e instala los paquetes de las versiones de los notebooks
 RUN pip3 -q install pip --upgrade
-RUN pip3 install jupyter
 RUN pip3 install jupyterlab
+RUN pip3 install notebook
 
 # crea un directorio para guardar archivos
 RUN mkdir src
@@ -25,8 +25,11 @@ CMD jupyter ${TYPE} --port=8888 --no-browser --ip=0.0.0.0 --allow-root
 #docker run --rm -i -t -p 8888:8888 -e TYPE=notebook jorgecardona/jupyter
 
 # cuando se quiera crear un contenedor y se mantenga incluso despues de cerrar la sesion
-#docker run -p 8888:8888 jorgecardona/jupyter
+#docker run -i -t -p 8888:8888 jorgecardona/jupyter
 #docker run --rm -i -t -p 8888:8888 -e TYPE=notebook jorgecardona/jupyter
 
-# cuando se quiera continuar la sesion en un contenedor persistido
+# cuando se quiera detener la ejecucion del contenedor
+#docker stop ID_DEL_CONTENEDOR
+
+# cuando se quiera continuar la ejecucion en un contenedor persistido
 #docker start -i ID_DEL_CONTENEDOR
