--- a/Docker Jupyter Lab y Jupyter Notebook/Dockerfile
+++ b/Docker Jupyter Lab y Jupyter Notebook/Dockerfile
@@ -1,10 +1,25 @@
 #define la version de python a instalar basado en la imagen oficial
 FROM python:latest
 
+#RUN apt-get install default-jdk -y
+#RUN apt install openjdk-17-jre -y -> instala el jdk por default del sistema
+#RUN apt install openjdk-17-jdk -y -> instala especificamente el jdk de java 17 
+#!java --version -> openjdk 17.0.2 2022-01-18
+#!update-alternatives --list java -> valida el directorio donde esta instalado el binario de java
+#!echo $JAVA_HOME -> /usr/lib/jvm/java-17-openjdk-amd64/bin/java
+
+
 #actualiza el pip e instala los paquetes de las versiones de los notebooks
+RUN apt-get update
+RUN apt-get install default-jdk -y
+
+# configura el directorio de inicializacion de java
+#ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64/bin/java
+
 RUN pip3 -q install pip --upgrade
 RUN pip3 install jupyterlab
 RUN pip3 install notebook
+RUN pip3 install itables
 
 # crea un directorio para guardar archivos
 RUN mkdir src
@@ -35,3 +50,7 @@ CMD jupyter ${TYPE} --port=8888 --no-browser --ip=0.0.0.0 --allow-root
 # cuando se quiera continuar o reiniciar la ejecucion en un contenedor persistido
 #docker start -i lab
 #docker start -i notebook
+
+# para subir o actualizar la imagen
+#docker login
+#docker push jorgecardona/jupyter
