--- a/Docker Jupyter Lab y Jupyter Notebook/Dockerfile
+++ b/Docker Jupyter Lab y Jupyter Notebook/Dockerfile
@@ -8,10 +8,9 @@ FROM python:latest
 #!update-alternatives --list java -> valida el directorio donde esta instalado el binario de java
 #!echo $JAVA_HOME -> /usr/lib/jvm/java-17-openjdk-amd64/bin/java
 
-
 #actualiza el pip e instala los paquetes de las versiones de los notebooks
 RUN apt-get update
-RUN apt-get install default-jdk -y
+RUN apt-get install default-jdk -y # para dar soporte a librerias que necesiten java como SPARK
 
 # configura el directorio de inicializacion de java
 #ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64/bin/java
