--- a/Docker Jupyter Lab y Jupyter Notebook/Dockerfile
+++ b/Docker Jupyter Lab y Jupyter Notebook/Dockerfile
@@ -1,24 +1,18 @@
-#define la version de python a instalar basado en la imagen oficial
+# define la version de python a instalar basado en la imagen oficial
 FROM python:latest
 
-#RUN apt-get install default-jdk -y
-#RUN apt install openjdk-17-jre -y -> instala el jdk por default del sistema
-#RUN apt install openjdk-17-jdk -y -> instala especificamente el jdk de java 17 
-#!java --version -> openjdk 17.0.2 2022-01-18
-#!update-alternatives --list java -> valida el directorio donde esta instalado el binario de java
-#!echo $JAVA_HOME -> /usr/lib/jvm/java-17-openjdk-amd64/bin/java
+# etiqueta creador de la imagen
+MAINTAINER JorgeCardona
+
+# actualiza los repositorios
+RUN apt-get update
+
+# instala el JDK para ejecutar aplicaciones que necesiten de la maquina virtual de java
+RUN apt-get install default-jdk -y
 
 #actualiza el pip e instala los paquetes de las versiones de los notebooks
-RUN apt-get update
-# para dar soporte a librerias que necesiten java como SPARK
-RUN apt-get install default-jdk -y 
-
-# configura el directorio de inicializacion de java
-#ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64/bin/java
-
 RUN pip3 -q install pip --upgrade
 RUN pip3 install jupyterlab
-RUN pip3 install notebook
 RUN pip3 install itables
 
 # crea un directorio para guardar archivos
@@ -28,6 +22,15 @@ WORKDIR src/notebooks
 
 # configura por defecto que el contenedor inicie con jupyter lab, pero se puede enviar la variable cuando se da la instruccion para iniciar el contenedor
 ENV TYPE=lab
+
+# Instala lenguaje R
+RUN apt-get install r-base -y
+
+# Instala R Jupyter Kernel
+RUN echo 'install.packages(c("IRkernel"),repos="http://cran.us.r-project.org", dependencies=TRUE)' > /tmp/packages.R && Rscript /tmp/packages.R
+
+# Instala R kernel
+RUN echo 'IRkernel::installspec()' > /tmp/temp.R && Rscript /tmp/temp.R
 
 # ejecuta los comandos al iniciar jupyter en el contenedor para ejecutar 
 CMD jupyter ${TYPE} --port=8888 --no-browser --ip=0.0.0.0 --allow-root
