--- a/Kubernetes/dashboard/dashboard-adminuser.yaml
+++ b/Kubernetes/dashboard/dashboard-adminuser.yaml
@@ -28,12 +28,12 @@ subjects:
 # kubectl apply -f https://raw.githubusercontent.com/JorgeCardona/skills/master/Kubernetes/dashboard/dashboard-adminuser.yaml
 
 # HABILITAR EL ACCESO AL DASHBOARD
-# kubectl proxy
+#  kubectl proxy --port=1978
 
 # GENERAR EL TOKEN PARA ACCEDER AL DASHBOARD
 # kubectl -n kubernetes-dashboard create token admin-user
 
 # ACCEDER AL DASHBOARD
-# http://localhost:8001/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy
+# http://localhost:1978/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy
 
 
