adicionados mas manifiestos de secretos

--- a/Kubernetes/Manifiestos/05 Pod + ConfigMap + Secretos + Servicios/pod-configmap-secretos-servicios.yaml
+++ b/Kubernetes/Manifiestos/05 Pod + ConfigMap + Secretos + Servicios/pod-configmap-secretos-servicios.yaml
@@ -10,7 +10,17 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
+  name: demo-config-secrets-sin-cifrar
+stringData:
+  PRIMER_SECRETO: "SECRETO_SIN_CIFRAR"
+  SEGUNDO_SECRETO: "VALORES_SIN_CIFRAR"
+  ULTIMO_SECRETO: "INFORMACION_EXPUESTA"
+---
+apiVersion: v1
+kind: Secret
+metadata:
   name: demo-config-secrets
+type: Opaque
 stringData:
   ENVIRONMENT_SECRETO: "ESPACIAL"
   PUERTO_SECRETO: "195019781925"
@@ -22,8 +32,8 @@ metadata:
   name: demo-config-secret-base64
 type: Opaque
 data:
-  username: YWRtaW4=
-  password: MWYyZDFlMmU2N2Rm
+  username: Sm9yZ2UgQ2FyZG9uYQ==
+  password: S3ViZXJuZXRlcyB5IERvY2tlciBlbiBXaW5kb3dzIHkgTGludXg=
 ---
 apiVersion: v1
 kind: Pod
@@ -52,6 +62,23 @@ spec:
           name: demo-config-map
           key: REGION # valor leido y definido desde el ConfigMap llamado demo-config-map
 
+  
+    - name: PRIMERO # NOMBRE DE LA VARIABLE DE AMBIENTE
+      valueFrom:
+        secretKeyRef:
+            name: demo-config-secrets-sin-cifrar # Nombre del objeto tipo Secreto de donde se van a leer las variables
+            key: PRIMER_SECRETO # valor leido y definido desde el ConfigMap llamado demo-config-map
+    - name: SEGUNDO # NOMBRE DE LA VARIABLE DE AMBIENTE
+      valueFrom:
+        secretKeyRef:
+            name: demo-config-secrets-sin-cifrar # Nombre del objeto tipo Secreto de donde se van a leer las variables
+            key: SEGUNDO_SECRETO # valor leido y definido desde el ConfigMap llamado demo-config-map
+    - name: ULTIMO # NOMBRE DE LA VARIABLE DE AMBIENTE
+      valueFrom:
+        secretKeyRef:
+            name: demo-config-secrets-sin-cifrar # Nombre del objeto tipo Secreto de donde se van a leer las variables
+            key: ULTIMO_SECRETO # valor leido y definido desde el ConfigMap llamado demo-config-map
+            
     - name: OTRA_PYTHON # NOMBRE DE LA VARIABLE DE AMBIENTE
       value: "VALORES ADICIONALES EN EL CONTENEDOR DE PYTHON" # valor definido directamente
       
@@ -121,3 +148,7 @@ spec:
   - name: port-python-app1
     protocol: TCP
     port: 5000 # puerto original donde se expone el contenedor de la imagen y puerto donde se va a exponer la aplicacion
+ 
+# kubectl get secret demo-config-secrets -o yaml 
+# kubectl get secret demo-config-secrets -o yaml
+# kubectl get secret demo-config-secret-base64 -o yaml
