--- a/Kubernetes/Manifiestos/07 Pod + Volumen Persistente/pod-volume-persistente-svc.yaml
+++ b/Kubernetes/Manifiestos/07 Pod + Volumen Persistente/pod-volume-persistente-svc.yaml
@@ -1,3 +1,16 @@
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  name: persistence-volume
+#spec:
+#  volumeMode: Filesystem
+#  storageClassName: local
+#  accessModes:
+#    - ReadWriteMany
+#  resources:
+#    requests:
+#      storage: 500Mi
+---
 apiVersion: v1
 kind: Pod
 metadata:
@@ -5,6 +18,14 @@ metadata:
     run: volume-multicontainer # base del selector
   name: multicontainer-pod-loadbalancer # nombre del HOSTNAME del POD
 spec:
+  volumes: # directorio del nodo
+    - name: almacenamiento-persistido
+      persistentVolumeClaim:
+        claimName: persistence-volume
+    
+  dnsPolicy: ClusterFirst
+  restartPolicy: Never    
+    
   containers:
   - name: python # nombre que va a tener el contenedor dentro del POD
     image: jorgecardona/test-kubernetes-ip-python-3.10.5:v1 # imagen con la que se va a crear el contenedor
@@ -15,9 +36,9 @@ spec:
     - name: ARCHIVO # NOMBRE DE LA VARIABLE DE AMBIENTE
       value: info.txt # valor definido directamente
       
-    volumeMounts:
-    - name: almacenamiento-compartido # el volumen de donde se quiere conectar
-      mountPath: /data/files # solo crea DIRECTORIOS no ARCHIVOS
+    volumeMounts: # solo crea DIRECTORIOS no ARCHIVOS
+    - name: almacenamiento-persistido # el volumen de donde se quiere conectar
+      mountPath: /data/files # directorio dentro del POD
       
       
   - name: java # nombre que va a tener el contenedor dentro del POD
@@ -29,15 +50,11 @@ spec:
     - name: ARCHIVO # NOMBRE DE LA VARIABLE DE AMBIENTE
       value: info.txt # valor definido directamente
       
-    volumeMounts:
-    - name: almacenamiento-compartido # el volumen de donde se quiere conectar
-      mountPath: /data/files # solo crea DIRECTORIOS no ARCHIVOS
+    volumeMounts: # solo crea DIRECTORIOS no ARCHIVOS
+    - name: almacenamiento-persistido # el volumen de donde se quiere conectar
+      mountPath: /data/files
       
-  volumes:
-  - name: almacenamiento-compartido
-    emptyDir: {}# Solo Existe mientras el POD este corriendo
-  dnsPolicy: ClusterFirst
-  restartPolicy: Never
+
 status: {}
 ---
 apiVersion: v1
@@ -63,6 +80,7 @@ spec:
     protocol: TCP
     targetPort: 5000 # puerto original donde se expone el contenedor de la imagen 
     port: 7777 # puerto en el que se quiere exponer la aplicacion, solo porque esta declarada la propiedad targetPort
+---
 
 # http://localhost:3333
 # http://localhost:7777
