--- a/Kubernetes/Manifiestos/06 Pod + Ingress/ingress-multicontainer.yaml
+++ b/Kubernetes/Manifiestos/06 Pod + Ingress/ingress-multicontainer.yaml
@@ -1,5 +1,8 @@
 # https://kubernetes.github.io/ingress-nginx/deploy/#quick-start
 # kubectl apply -f https://raw.githubusercontent.com/JorgeCardona/skills/master/Kubernetes/Ingress%20Controller%20Nginx/kubernetes-ingress-nginx-v1.3.0.yaml
+# paso 4 -> https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
+# en el archivo host del directorio C:\Windows\System32\drivers\etc\ 
+# adicionar la linea 127.0.0.1 jorge-cardona.kubernetes  
 ---
 apiVersion: v1
 kind: Pod
@@ -47,9 +50,11 @@ metadata:
   annotations:   
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    #nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-    - http:   
+    - host: jorge-cardona.kubernetes
+      http:   
         paths:  
           - path: /python # context path de la aplicacion
             pathType: Prefix   
@@ -66,5 +71,5 @@ spec:
                 port:  
                   number: 9999
 ---
-# http://localhost/python/docs
-# http://localhost/java/docs
+# http://jorge-cardona.kubernetes/python/docs
+# http://jorge-cardona.kubernetes/java
