--- a/Kubernetes/Manifiestos/06 Pod + Ingress + HostLocal + Host Personalizado/02 Host Personalizado/ingress-multicontainer-host-personalizado.yaml
+++ b/Kubernetes/Manifiestos/06 Pod + Ingress + HostLocal + Host Personalizado/02 Host Personalizado/ingress-multicontainer-host-personalizado.yaml
@@ -8,8 +8,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    run: mc-np-ingress # base del selector
-  name: mc-pod-np-ingress # nombre del HOSTNAME del POD
+    run: mc-np-ingress-host-personalizado # base del selector
+  name: mc-pod-np-ingress-host-personalizado # nombre del HOSTNAME del POD
 spec:
   containers:
   - name: python # nombre que va a tener el contenedor dentro del POD
@@ -26,14 +26,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    run: mc-pod-t-np-svc-ingress
-  name: mc-pod-svc-nodeport-ingress
+    run: mc-pod-t-np-svc-ingress-host-personalizado
+  name: mc-pod-svc-nodeport-ingress-host-personalizado
   namespace: default
 spec:
   sessionAffinity: None
   type: NodePort
   selector:
-    run: mc-np-ingress
+    run: mc-np-ingress-host-personalizado
   ports:
   - name: port-java # se puede poner el nombre que se quiera, lo importante es el puerto que TIENE que ser el del contenedor
     protocol: TCP
@@ -46,7 +46,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-multicontainer-java-python  
+  name: ingress-multicontainer-java-python-host-personalizado  
   annotations:   
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
