--- a/Kubernetes/Manifiestos/06 Pod + Ingress + HostLocal + Host Personalizado/02 Host Personalizado/ingress-multicontainer-host-personalizado.yaml
+++ b/Kubernetes/Manifiestos/06 Pod + Ingress + HostLocal + Host Personalizado/02 Host Personalizado/ingress-multicontainer-host-personalizado.yaml
@@ -3,14 +3,14 @@
 # paso 4 -> https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
 # en el archivo host del directorio C:\Windows\System32\drivers\etc\ 
 # adicionar la linea de los host, despues de que kubectl get ingress muestre la ADDRESS
-# en este caso localhost entonces se pone -> 127.0.0.1 jorge-cardona.kubernetes  y 127.0.0.1 jorge-cardona.ingress
+# en este caso localhost entonces se pone -> 127.0.0.1 jorge-cardona.kubernetes  y 127.0.0.1 jorge-cardona.ingress 
 ---
 apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    run: mc-np-ingress-host-personalizado # base del selector
-  name: mc-pod-np-ingress-host-personalizado # nombre del HOSTNAME del POD
+    run: mc-np-ingress # base del selector
+  name: mc-pod-np-ingress # nombre del HOSTNAME del POD
 spec:
   containers:
   - name: python # nombre que va a tener el contenedor dentro del POD
@@ -27,14 +27,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    run: mc-pod-t-np-svc-ingress-host-personalizado
-  name: mc-pod-svc-nodeport-ingress-host-personalizado
+    run: mc-pod-t-np-svc-ingress
+  name: mc-pod-svc-nodeport-ingress
   namespace: default
 spec:
   sessionAffinity: None
   type: NodePort
   selector:
-    run: mc-np-ingress-host-personalizado
+    run: mc-np-ingress
   ports:
   - name: port-java # se puede poner el nombre que se quiera, lo importante es el puerto que TIENE que ser el del contenedor
     protocol: TCP
@@ -47,7 +47,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-multicontainer-java-python-host-personalizado  
+  name: ingress-multicontainer-java-python  
   annotations:   
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
@@ -71,7 +71,7 @@ spec:
                 name: mc-pod-svc-nodeport-ingress
                 port:  
                   number: 9999
-                
+                  
     - host: jorge-cardona.ingress
       http:   
         paths:  
@@ -89,6 +89,7 @@ spec:
                 name: mc-pod-svc-nodeport-ingress
                 port:  
                   number: 9999
+---
 ---
 # http://jorge-cardona.kubernetes/python/docs
 # http://jorge-cardona.kubernetes/java
