--- a/Kubernetes/Manifiestos/10 Pod + Limit CPU + Ram + Disco duro/limits-cpu-ram-disco-duro.yaml
+++ b/Kubernetes/Manifiestos/10 Pod + Limit CPU + Ram + Disco duro/limits-cpu-ram-disco-duro.yaml
@@ -12,19 +12,34 @@ spec:
       limits:
         memory: 1024Mi
         cpu: 2000m
+        ephemeral-storage: "4Gi"
       requests:
         memory: 512Mi
-        cpu: 1000m          
-      
+        cpu: 1000m
+        ephemeral-storage: "2Gi"
+        
+    volumeMounts:
+      - name: ephemeral
+        mountPath: "/tmp"
+        
   - name: java # nombre que va a tener el contenedor dentro del POD
     image: jorgecardona/test-kubernetes-ip-java-17:v1 # imagen con la que se va a crear el contenedor
     resources:
       limits:
         memory: 1024Mi
         cpu: 2000m
+        ephemeral-storage: "4Gi"
       requests:
         memory: 512Mi
-        cpu: 1000m         
+        cpu: 1000m
+        ephemeral-storage: "2Gi"
+    volumeMounts:
+      - name: ephemeral
+        mountPath: "/tmp"  
+        
+  volumes:
+    - name: ephemeral
+      emptyDir: {}      
    
   dnsPolicy: ClusterFirst
   restartPolicy: Never
@@ -43,21 +58,36 @@ spec:
     resources:
       limits:
         memory: 1024Mi
-        cpu: 2000m
+        cpu: 3000m
+        ephemeral-storage: "23Gi"
       requests:
         memory: 512Mi
-        cpu: 1000m      
-      
+        cpu: 1000m
+        ephemeral-storage: "5Gi"
+        
+    volumeMounts:
+      - name: ephemeral
+        mountPath: "/tmp"
+        
   - name: java # nombre que va a tener el contenedor dentro del POD
     image: jorgecardona/test-kubernetes-ip-java-17:v1 # imagen con la que se va a crear el contenedor
     resources:
       limits:
-        memory: 1024Mi
-        cpu: 2000m
+        memory: 2048Mi
+        cpu: 4000m
+        ephemeral-storage: "8Gi"
       requests:
-        memory: 512Mi
-        cpu: 1000m          
-   
+        memory: 1024Mi
+        cpu: 1500m
+        ephemeral-storage: "8Gi"
+    volumeMounts:
+      - name: ephemeral
+        mountPath: "/tmp"  
+        
+  volumes:
+    - name: ephemeral
+      emptyDir: {}
+      
   dnsPolicy: ClusterFirst
   restartPolicy: Never
 status: {}
@@ -111,5 +141,6 @@ spec:
     port: 5555 # puerto en el que se quiere exponer la aplicacion, solo porque esta declarada la propiedad targetPort
 ---
 # kubectl describe node
+# kubectl delete pod mc-limits-v1
 # http://localhost:3333/java/
 # http://localhost:4444/java/ 
