--- a/Kubernetes/Manifiestos/07 Pod + ConfigMap + Secretos + Servicios + Variables de Ambiente/pod-configmap-secretos-servicios-variables-de-ambiente.yaml
+++ b/Kubernetes/Manifiestos/07 Pod + ConfigMap + Secretos + Servicios + Variables de Ambiente/pod-configmap-secretos-servicios-variables-de-ambiente.yaml
@@ -141,9 +141,9 @@ spec:
     protocol: TCP
     targetPort: 9999 # puerto original donde se expone el contenedor de la imagen 
     port: 3333 # puerto en el que se quiere exponer la aplicacion, solo porque esta declarada la propiedad targetPort
-    # http://localhost:3333 no conecta usando el otro contenedor del POD, dado que el endpoint del servicio 'web' que esta dentro del POD 
-    # porque internamente no se reescribe entonces se debe consumir usando http://localhost:9999 se debe conectar con el puerto original
-    # pero si se usa el navegar si queda expuesta por la url http://localhost:3333
+    # http://localhost:3333/java no conecta usando el otro contenedor del POD, dado que el endpoint del servicio 'web' que esta dentro del POD 
+    # porque internamente no se reescribe entonces se debe consumir usando http://localhost:9999/java se debe conectar con el puerto original
+    # pero si se usa el navegar si queda expuesta por la url http://localhost:3333/java
 
   - name: port-python-app1
     protocol: TCP
