actualizadas url del controlador del ingress

--- a/Kubernetes/Manifiestos/06 Pod + Ingress + HostLocal + Host Personalizado/02 Host Personalizado/ingress-multicontainer-host-personalizado.yaml
+++ b/Kubernetes/Manifiestos/06 Pod + Ingress + HostLocal + Host Personalizado/02 Host Personalizado/ingress-multicontainer-host-personalizado.yaml
@@ -1,5 +1,5 @@
 # https://kubernetes.github.io/ingress-nginx/deploy/#quick-start
-# kubectl apply -f https://raw.githubusercontent.com/JorgeCardona/skills/master/Kubernetes/Ingress%20Controller%20Nginx/kubernetes-ingress-nginx-v1.3.0.yaml
+# kubectl apply -f https://raw.githubusercontent.com/JorgeCardona/skills/master/Kubernetes/Controllers/kubernetes-ingress-nginx-v1.3.0.yaml
 # paso 4 -> https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
 # en el archivo host del directorio C:\Windows\System32\drivers\etc\ 
 # adicionar la linea de los host, despues de que kubectl get ingress muestre la ADDRESS
