--- a/Kubernetes/Manifiestos/06 Pod + Ingress + HostLocal + Host Personalizado/01 Localhost/ingress-multicontainer-localhost.yaml
+++ b/Kubernetes/Manifiestos/06 Pod + Ingress + HostLocal + Host Personalizado/01 Localhost/ingress-multicontainer-localhost.yaml
@@ -1,5 +1,5 @@
 # https://kubernetes.github.io/ingress-nginx/deploy/#quick-start
-# kubectl apply -f https://raw.githubusercontent.com/JorgeCardona/skills/master/Kubernetes/Ingress%20Controller%20Nginx/kubernetes-ingress-nginx-v1.3.0.yaml
+# kubectl apply -f https://raw.githubusercontent.com/JorgeCardona/skills/master/Kubernetes/Controllers/kubernetes-ingress-nginx-v1.3.0.yaml
 ---
 apiVersion: v1
 kind: Pod
