--- a/Kubernetes/Manifiestos/06_Pod_+_Ingress_+_HostLocal_+_Host_Personalizado/02_Host_Personalizado/ingress-multicontainer-host-personalizado.yaml
+++ b/Kubernetes/Manifiestos/06_Pod_+_Ingress_+_HostLocal_+_Host_Personalizado/02_Host_Personalizado/ingress-multicontainer-host-personalizado.yaml
@@ -72,7 +72,7 @@ spec:
                 port:  
                   number: 9999
                   
-    - host: jorge-cardona.ingress.tereres
+    - host: jorge-cardona.ingress
       http:   
         paths:  
           - path: /python # context path de la aplicacion
