--- a/Hadoop-Spark Dockerizados/5 Datanodes - 1 Namenode - Hadoop v2.10.2 -  Spark v2.4.8-bin-hadoop2.7 - Java v Openjdk-8-jdk/docker/base/Dockerfile
+++ b/Hadoop-Spark Dockerizados/5 Datanodes - 1 Namenode - Hadoop v2.10.2 -  Spark v2.4.8-bin-hadoop2.7 - Java v Openjdk-8-jdk/docker/base/Dockerfile
@@ -19,10 +19,10 @@ RUN apt-get install -y ${JAVA_VERSION}
 RUN apt-get install -y wget
 
 # define el repositorio donde se va a descargar Hadoop
-ENV HADOOP_WEB=http://apache.rediris.es/hadoop/common
+ENV HADOOP_WEB=https://archive.apache.org/dist/hadoop/common
 
 # defina la version de Hadoop a descargar
-ENV HADOOP_VERSION=hadoop-2.10.2
+ENV HADOOP_VERSION=hadoop-2.7.7
 
 # descarga hadoop
 RUN wget ${HADOOP_WEB}/${HADOOP_VERSION}/${HADOOP_VERSION}.tar.gz
@@ -84,12 +84,19 @@ EXPOSE 8030 8031 8032 8033 8040 8042 8088 8188
 #Other ports
 EXPOSE 49707 2122
 
-# docker build -f docker/base/Dockerfile -t jorgecardona/hadoop-cluster-datanode:v1 docker/base
+# docker build -f docker/base/Dockerfile -t jorgecardona/hadoop-2.7.7-java-8-cluster-datanode:v1 docker/base
 
 # docker network create --driver=bridge hadoop-network 
-# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave1 --hostname hadoop-slave1 jorgecardona/hadoop-cluster-datanode:v1
-# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave2 --hostname hadoop-slave2 jorgecardona/hadoop-cluster-datanode:v1
-# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave3 --hostname hadoop-slave3 jorgecardona/hadoop-cluster-datanode:v1
-# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave4 --hostname hadoop-slave4 jorgecardona/hadoop-cluster-datanode:v1
-# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave5 --hostname hadoop-slave5 jorgecardona/hadoop-cluster-datanode:v1
-# docker run --rm -itd --net=hadoop-network -p 50070:50070  -p 8088:8088  -p 18080:18080  --name hadoop-master --hostname hadoop-master -v $PWD/data:/data jorgecardona/hadoop-cluster-namenode:v1
+# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave1 --hostname hadoop-slave1 jorgecardona/hadoop-2.7.7-java-8-cluster-datanode:v1
+# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave2 --hostname hadoop-slave2 jorgecardona/hadoop-2.7.7-java-8-cluster-datanode:v1
+# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave3 --hostname hadoop-slave3 jorgecardona/hadoop-2.7.7-java-8-cluster-datanode:v1
+# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave4 --hostname hadoop-slave4 jorgecardona/hadoop-2.7.7-java-8-cluster-datanode:v1
+# docker run --rm -itd  --net=hadoop-network  --name hadoop-slave5 --hostname hadoop-slave5 jorgecardona/hadoop-2.7.7-java-8-cluster-datanode:v1
+# docker run --rm -itd --net=hadoop-network -p 50070:50070  -p 8088:8088  -p 18080:18080  --name hadoop-master --hostname hadoop-master -v $PWD/data:/data jorgecardona/spark-2.4.8-hadoop-2.7-java-8-cluster-namenode:v1
+
+# hadoop 
+# http://localhost:50070
+# http://localhost:8088
+
+# spark 
+# http://localhost:18080
